--- a/Pages/About.html
+++ b/Pages/About.html
@@ -18,7 +18,7 @@
         
         John's AMAZING Car Collection 
 
-        <a href="../main.html" id = "linkOne">Home</a> 
+        <a href="../index.html" id = "linkOne">Home</a> 
         <a href="../Pages/contact.html" id = "linkTwo">Contact</a>
     </h1>
 
@@ -60,3 +60,4 @@
 </body>
 
 </html>
+
