--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,7 +4,7 @@
 
 <head> 
 
-<link rel="stylesheet" href="../../WebDev_Project_K.R.Studios-main/CSS/style.css">
+<link rel="stylesheet" href="../../CSS/style.css">
 
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Yarndings+20&display=swap" rel="stylesheet">
 
@@ -52,3 +52,4 @@
 
 
 </html>
+
