--- a/Pages/About.html
+++ b/Pages/About.html
@@ -19,7 +19,7 @@
         John's AMAZING Car Collection 
 
         <a href="../index.html" id = "linkOne">Home</a> 
-        <a href="../Pages/contact.html" id = "linkTwo">Contact</a>
+        <a href="contact.html" id = "linkTwo">Contact</a>
     </h1>
 
     <div class = "seperateHeadings">
@@ -60,6 +60,7 @@
 </body>
 
 </html>
+
 
 
 
