--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -18,8 +18,8 @@
         
         John's AMAZING Car Collection 
 
-        <a href="../main.html" id = "linkCon">Home</a> 
-        <a href="../Pages/About.html" id = "linkConTwo">About</a>
+        <a href="../index.html" id = "linkCon">Home</a> 
+        <a href="About.html" id = "linkConTwo">About</a>
     </h1>
     
 </div>
@@ -52,5 +52,6 @@
 
 
 </html>
+
 
 
