--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         
         John's AMAZING Car Collection 
 
-        <a href="../WebDev_Project_K.R.Studios-main/Pages/About.html" id = "linkOne">About</a> 
-        <a href="../WebDev_Project_K.R.Studios-main/Pages/contact.html" id = "linkTwo">Contact</a>
+        <a href="Pages/About.html" id = "linkOne">About</a> 
+        <a href="Pages/contact.html" id = "linkTwo">Contact</a>
     </h1>
 
     <div class = "seperateHeadings">
@@ -69,5 +69,6 @@
 </body>
 
 </html>
+
 
 
