--- a/Pages/About.html
+++ b/Pages/About.html
@@ -25,7 +25,7 @@
     <div class = "Square"></div>
 
     <a href="../index.html" id = "linkOne" class = pClass>Home</a> 
-    <a href="Pages/contact.html" id = "linkTwo" class = pClass>Contact</a>
+    <a href="contact.html" id = "linkTwo" class = pClass>Contact</a>
 
     </div>
     
@@ -66,6 +66,7 @@
 </body>
 
 </html>
+
 
 
 
