--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -24,7 +24,7 @@
 
     <div class = "Square"></div>
 
-    <a href="Pages/About.html" id = "linkOne" class = pClass>About</a> 
+    <a href="About.html" id = "linkOne" class = pClass>About</a> 
     <a href="../index.html" id = "linkTwo" class = pClass>Home</a>
 
     </div>
@@ -67,6 +67,7 @@
 
 
 </html>
+
 
 
 
