--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <div class = "Square"></div>
 
-    <a href="Pages/About.html" id = "linkOne" class = pClass>About</a> 
-    <a href="Pages/contact.html" id = "linkTwo" class = pClass>Contact</a>
+    <a href="Pages/About.html" id = "linkOne">About</a> 
+    <a href="Pages/contact.html" id = "linkTwo" >Contact</a>
 
     </div>
     
