--- a/Pages/About.html
+++ b/Pages/About.html
@@ -33,7 +33,7 @@
 
     <div class = "seperateHeadings">
 
-        <h1 id = "featuredCar">About my beatiful self!</h1>
+        <h1 id = "featuredCar">About my beautiful self!</h1>
         
     </div>
     
@@ -66,6 +66,7 @@
 </body>
 
 </html>
+
 
 
 
