--- a/Pages/About.html
+++ b/Pages/About.html
@@ -43,7 +43,7 @@
     
     <div class = "idImage">
 
-        <img id = "johnID" src="https://i.imgur.com/7AMGOy6.png" alt="John O'Reilly">
+        <img id = "johnID" src="https://i.imgur.com/7AMGOy6.png" alt="Selfie of John O'Reilly">
 
     </div>
 
@@ -66,6 +66,7 @@
 </body>
 
 </html>
+
 
 
 
