--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class = "infoTextLink">
 
-        <p class = "sanFont> Click <a href="https://www.caranddriver.com/mclaren/750s" id = "infoLink">Here</a> to find out more </p>
+        <p class = "sanFont"> Click <a href="https://www.caranddriver.com/mclaren/750s" id = "infoLink">Here</a> to find out more </p>
 
     </div>
 </div>
@@ -78,6 +78,7 @@
 </body>
 
 </html>
+
 
 
 
