--- a/Pages/About.html
+++ b/Pages/About.html
@@ -60,7 +60,7 @@
     
     <div class = "idImage">
 
-        <img id = "johnID" src="../Media/John.png" alt="Selfie of John O'Reilly">
+        <img id = "johnID" src="https://i.imgur.com/7AMGOy6.png" alt="Selfie of John O'Reilly">
 
     </div>
 
@@ -96,6 +96,7 @@
 </body>
 
 </html>
+
 
 
 
