--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -95,7 +95,7 @@
         <label for="Message" class = "smallText">Message:</label> <br>
         <textarea id = "Message" name = "Message" rows = "5" cols = "50" class = "smallText">Describe your reasoning for message here! </textarea><br><br>
 
-        <input type="submit" value="Submit" class = "smallText">
+        <input type="submit" value="Submit" class = "smallText" id = "Submit">
             
     </form>
 
